--- a/ANN_from_scratch_.ipynb
+++ b/ANN_from_scratch_.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "GGd-IRay-Ii7",
         "colab": {
@@ -117,7 +117,7 @@
         "id": "EThUYu2sY7h-",
         "outputId": "16a5bb6f-802f-4337-ddbe-e9932c292093"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -181,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -206,16 +206,12 @@
       ],
       "source": [
         "X_train = X_train.astype('float32')\n",
-        "X_test = X_test.astype('float32')\n",
-        "\n",
-        "X_train=X_train.reshape(X_train.shape[0],-1)\n",
-        "X_test=X_test.reshape(X_test.shape[0],-1)\n",
-        "print(X_train)"
+        "X_test = X_test.astype('float32')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -248,12 +244,12 @@
         "id": "vchqJ-h5_VLX"
       },
       "source": [
-        "# Standardizing The Data"
+        "# Normalizing The Data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "34rMdf5Z8zHI"
       },
@@ -272,7 +268,7 @@
       "metadata": {
         "id": "Q9JTBiyqyoRC"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -286,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "RRaAlafLpTtV"
       },
@@ -311,7 +307,7 @@
       "metadata": {
         "id": "GAlG62dJkBpo"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -325,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "9lvpVJHlAex9"
       },
@@ -348,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "L1BMRDhxB3Gx"
       },
@@ -369,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "MGDhlTs8Enpr"
       },
@@ -390,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "_gh6jPffx4hE"
       },
@@ -422,7 +418,7 @@
       "metadata": {
         "id": "7fw_mI-S2Ar5"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -445,7 +441,7 @@
       "metadata": {
         "id": "YHBxKpMnl2_6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -456,7 +452,7 @@
       "metadata": {
         "id": "JyuJmmKV1Si-"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -486,7 +482,7 @@
       "metadata": {
         "id": "DU29xgeFVVea"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +517,7 @@
       "metadata": {
         "id": "s6IAPi9SstDD"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +559,7 @@
       "metadata": {
         "id": "GsszkiyfDwLW"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -621,7 +617,7 @@
       "metadata": {
         "id": "yVjGgrIYZC65"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -642,7 +638,7 @@
       "metadata": {
         "id": "vpXsrTcSjcua"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -663,7 +659,7 @@
       "metadata": {
         "id": "Apacv4mLNtJh"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -708,7 +704,7 @@
       "metadata": {
         "id": "NP8-yozyezq3"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +760,7 @@
       "metadata": {
         "id": "PUmlXhwF_LzP"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -797,7 +793,7 @@
       "metadata": {
         "id": "lQ27uDYP6axp"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -824,7 +820,7 @@
       "metadata": {
         "id": "Si0k44KJULQW"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -838,7 +834,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "hcGYqrTRGit5"
       },
@@ -908,7 +904,7 @@
       "metadata": {
         "id": "NahhQdtvUs2a"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1047,7 +1043,7 @@
         },
         "outputId": "04e974a7-1660-4a56-88b9-e0a6cdc1a5e8"
       },
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1076,7 +1072,7 @@
         },
         "outputId": "eb20424a-85ec-4504-d3ee-7a98e0bcef39"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
